update home and batch gallery

--- a/views/gallery_batch.ejs
+++ b/views/gallery_batch.ejs
@@ -111,28 +111,37 @@
                 </div>
                 
                 <div id="folio-container" class="row">
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
+                        <div class="recent-events-wrap">
+                            <img class="img-responsive" src="img/2021.jpeg" style="border:5px double black;"alt="">
+                            <samp>
+                            <center><a class="preview" href="img/2021.jpeg"><i class="fa fa-eye"></i>View Batch-2017-21</a></center>
+                         </samp>
+                        </div>
+                    </div>
                     
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
                         <div class="recent-events-wrap">
-                            <img class="img-responsive" src="https://scontent.fccu7-1.fna.fbcdn.net/v/t1.0-9/52641225_979689855754823_8037109628842016768_o.jpg?_nc_cat=105&ccb=2&_nc_sid=a4a2d7&_nc_ohc=ZpvEyB_TOowAX_5DLFv&_nc_oc=AQnm8e_YscMGq56XJCBpSU71k4OlT6MAprEsI1dt537Os7gxbLIv0MfdVisjuCe4vxqbPDaV7GApwp2h8__jlT2t&_nc_ht=scontent.fccu7-1.fna&oh=bdecc73e4322f5ac6ffd59dff46acf31&oe=5FF14CD2" style="border:5px double black;"alt="">
+                            <img class="img-responsive" src="img/2020.jpeg" style="border:5px double black;"alt="">
                             <samp>
-                            <center><a class="preview" href="https://scontent.fccu7-1.fna.fbcdn.net/v/t1.0-9/52641225_979689855754823_8037109628842016768_o.jpg?_nc_cat=105&ccb=2&_nc_sid=a4a2d7&_nc_ohc=ZpvEyB_TOowAX_5DLFv&_nc_oc=AQnm8e_YscMGq56XJCBpSU71k4OlT6MAprEsI1dt537Os7gxbLIv0MfdVisjuCe4vxqbPDaV7GApwp2h8__jlT2t&_nc_ht=scontent.fccu7-1.fna&oh=bdecc73e4322f5ac6ffd59dff46acf31&oe=5FF14CD2"><i class="fa fa-eye"></i>View Batch-2016-20</a></center>
+                            <center><a class="preview" href="img/2020.jpeg"><i class="fa fa-eye"></i>View Batch-2016-20</a></center>
                          </samp>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
                         <div class="recent-events-wrap">
-                            <img class="img-responsive" src="https://scontent.frdp2-1.fna.fbcdn.net/v/t1.0-9/61754419_141232697021827_6882370043103936512_n.jpg?_nc_cat=106&ccb=2&_nc_sid=8bfeb9&_nc_ohc=hsCF94L4bJEAX8AqMwK&_nc_ht=scontent.frdp2-1.fna&oh=3de83f3b6f80f71bd26113b2a7cdb184&oe=5FF06422" style="border:5px double black;"alt="">
+                            <img class="img-responsive" src="/img/2019.jpeg" style="border:5px double black;"alt="">
                             <samp>
-                            <center><a class="preview" href="https://scontent.frdp2-1.fna.fbcdn.net/v/t1.0-9/61754419_141232697021827_6882370043103936512_n.jpg?_nc_cat=106&ccb=2&_nc_sid=8bfeb9&_nc_ohc=hsCF94L4bJEAX8AqMwK&_nc_ht=scontent.frdp2-1.fna&oh=3de83f3b6f80f71bd26113b2a7cdb184&oe=5FF06422"><i class="fa fa-eye"></i>View Batch-2015-19</a></center>
+                            <center><a class="preview" href="/img/2019.jpeg"><i class="fa fa-eye"></i>View Batch-2015-19</a></center>
                          </samp>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
                         <div class="recent-events-wrap">
-                            <img class="img-responsive" src="https://scontent.fccu7-1.fna.fbcdn.net/v/t1.0-9/33602765_2143061289250891_2249278045112238080_o.jpg?_nc_cat=100&ccb=2&_nc_sid=730e14&_nc_ohc=WsrlwRKJfCMAX_i8v4k&_nc_ht=scontent.fccu7-1.fna&oh=e919d29bed8322e20d7edcfa515b223c&oe=5FEE987C" style="border:5px double black;"alt="">
+                            <img class="img-responsive" src="/img/2018_.jpeg" style="border:5px double black;"alt="">
                             <samp>
-                            <center><a class="preview" href="https://scontent.fccu7-1.fna.fbcdn.net/v/t1.0-9/33602765_2143061289250891_2249278045112238080_o.jpg?_nc_cat=100&ccb=2&_nc_sid=730e14&_nc_ohc=WsrlwRKJfCMAX_i8v4k&_nc_ht=scontent.fccu7-1.fna&oh=e919d29bed8322e20d7edcfa515b223c&oe=5FEE987C"><i class="fa fa-eye"></i>View Batch-2014-18</a></center>
+                            <center><a class="preview" href="/img/2018_.jpeg"><i class="fa fa-eye"></i>View Batch-2014-18</a></center>
                          </samp>
                         </div>
                     </div>
@@ -146,9 +155,9 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12  ">
                         <div class="recent-events-wrap">
-                            <img class="img-responsive" src="https://scontent.fccu7-1.fna.fbcdn.net/v/t1.0-9/13507167_593683737460064_3859013442474385752_n.jpg?_nc_cat=110&ccb=2&_nc_sid=19026a&_nc_ohc=oUdxayRBE74AX-S5a0t&_nc_ht=scontent.fccu7-1.fna&oh=79b0651b452cfde0fb48b7c9566ffdd5&oe=5FF11F40" style="border:5px double black;"alt="">
+                            <img class="img-responsive" src="/img/2016.jpeg" style="border:5px double black;"alt="">
                             <samp>
-                            <center><a class="preview" href="https://scontent.fccu7-1.fna.fbcdn.net/v/t1.0-9/13507167_593683737460064_3859013442474385752_n.jpg?_nc_cat=110&ccb=2&_nc_sid=19026a&_nc_ohc=oUdxayRBE74AX-S5a0t&_nc_ht=scontent.fccu7-1.fna&oh=79b0651b452cfde0fb48b7c9566ffdd5&oe=5FF11F40"><i class="fa fa-eye"></i>View Batch-2012-16</a></center>
+                            <center><a class="preview" href="/img/2016.jpeg"><i class="fa fa-eye"></i>View Batch-2012-16</a></center>
                          </samp>
                         </div>
                     </div>
