--- a/views/index.ejs
+++ b/views/index.ejs
@@ -240,6 +240,93 @@
             </div>
         </section>
         <!-- Blog -->
+
+        <section class="templatemo-container light-gray-bg section-shadow-bottom">
+            <div class="container">
+                <div class="row section-title-container">
+                    <div class="col-lg-12 text-uppercase text-center">
+                        <div class="section-title-underline-blue"></div>
+                        <hr class="section-title-underline">
+                    </div>
+                </div> <!-- row -->
+                <div class="row">
+                     
+                    <div class="col-lg-12 col-md-12">
+                        <span class="blue-text"><h2>From The Admin Panel</h2></span>
+                        <p class="justify-text">The student body of any educational institute is one of the primary pillars of that institute. Thus every student body needs a platform through which they can voice their opinions, suggestions, complains and demands for their and their institute’s betterment. And not only voicing their opinion, but a platform is also very essential for proper communication among the students, faculty and administration. 
+                            In GCELT this platform is provided to the students in form of Students Welfare Association of GCELT, a non-profitable, apolitical welfare association, by the students of GCELT and for the students of GCELT.</p>
+                        <p class="justify-text">Students Association of GCELT is a government of West Bengal registered association, the Reg. No being- S/1L/74818 of 2010-2011 under West Bengal Act XXVI of 1961. The main purpose and activity of this student body are as follows-
+                        </p>
+
+                        <p class="justify-text">Students Welfare Association, GCELT is a versatile organisation of Government College Of Engineering And Leather Technology. This Association is an emotion to all the GCELTIANS. In a 100 years college it's not easy to keep all the GCELTIANS under a single umbrella. But Students Welfare Association, GCELT has the ability to do it. Thats why we are launching this website to reunite the GCELTIANS under their own kingdom. We want to grow the melange of connections between us for the betterment of the college. So this is a small innitiative by the GCELTIANS & for the GCELTIANS. </p>
+                            
+                        <p class="justify-text">
+
+                            "Four words we never tell lie<br>
+                            Remain GCELTIANS till die"</p>
+                            <br>
+                            
+                         <p class="justify-text">   
+                            <h5 > <span style="font-weight: bold;"> Mr. Pallab Nandi </span>( Governing Body Rep 2018-19)</h5>
+                            <h5 > <span style="font-weight: bold;"> Mr. Arkadipta Mukherjee </span> ( Governing Body Rep  2020-21) </h5>
+                            <h5> <span style="font-weight: bold;"> Miss Tithi Ghosh</span> ( Asst. Technical Head 2021-22)</h5>
+                            <h5 > <span style="font-weight: bold;"> Mr. Souraprabha Ganguly </span>( Administration Committee Member ) </h5>
+                        </p>
+                         
+                    </div>
+                </div>
+
+                <br>
+                <br>
+
+                <div class="row">
+                     
+                    <div class="col-lg-12 col-md-12">
+                        <span class="blue-text"><h2>From the General Secretary's Desk</h2></span>
+                        <p class="justify-text">The student body of any educational institute is one of the primary pillars of that institute. Thus every student body needs a platform through which they can voice their opinions, suggestions, complains and demands for their and their institute’s betterment. And not only voicing their opinion, but a platform is also very essential for proper communication among the students, faculty and administration. In GCELT this platform is provided to the students in form of Students Welfare Association of GCELT, a non-profitable, apolitical welfare association, by the students of GCELT and for the students of GCELT.</p>
+                        <p class="justify-text">Students Association of GCELT is a government of West Bengal registered association, the Reg. No being- S/1L/74818 of 2010-2011 under West Bengal Act XXVI of 1961. The main purpose and activity of this student body are as follows-
+                        </p>
+                        <p class="justify-text">
+                            <samp>
+                               (1).To maintain a unity and communication among all the students of the college present or alumni. Provide a platform using which the students will be able to voice their opinions, suggestions and complains.
+                            </samp>
+                        </p>
+                        <p class="justify-text">
+                            <samp>
+                                (2).Organize and encourage various co-curricular activities. Different student clubs of GCELT such as the Anti-ragging club, Theatre club, Music club, Debate club, Sports club are all part of the Students Welfare Association.
+                            </samp>
+                        </p>
+                        <p class="justify-text">
+                            <samp>
+                               (3).Every year two fests: one cultural and one technical are being organized by the students of GCELT, under the banner of Students Welfare Association.
+                            </samp>
+                        </p>
+                        <p class="justify-text">
+                            <samp>
+                                (4).Annual cricket, football, badminton, carom tournament are organized by the association.
+                            </samp>
+                        </p>
+                        <p class="justify-text">
+                            <samp>
+                                (5).Other events organized and celebrated by the association includes- Freshers’ Welcome, Teachers’ Day, Independence Day, Republic Day, Rabindra Jayanti, Sharswati Puja, Final year Farewell etc.
+                            </samp>
+                        </p>
+                        <p class="justify-text">
+                            The office bearers of this association are strictly students studying in GCELT and no one else. The post of General Secretary contains student from 4th year, Assistant General Secretary from 3rd year, and Treasurer from both 4th and 3rd year. Other official posts of the association include Sports Secretary, Cultural Secretary, Association PR student. Also class’ representative from each year and each stream are also part of the Students’ Welfare Association of GCELT. The office bearers are strictly students studying at GCELT at that time and they are chosen through voting. This election is held every year, under the supervision of college administration.
+                        </p>
+                        <p class="justify-text">
+                            Lastly to speak about this association’s motive, it can be said, Students Welfare Association of GCELT echoes George Bernard Shaw’s words: “You see things, and you say "Why?" But I dream things that never were, and I say "Why not?".
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+
+
+
+
         <section class="templatemo-container features">
             <div class="container features-content">
                 <div class="row section-title-container">
