--- a/views/index.ejs
+++ b/views/index.ejs
@@ -265,14 +265,7 @@
                             "Four words we never tell lie<br>
                             Remain GCELTIANS till die"</p>
                             <br>
-                            
-                         <p class="justify-text">   
-                            <h5 > <span style="font-weight: bold;"> Mr. Pallab Nandi </span>( Governing Body Rep 2018-19)</h5>
-                            <h5 > <span style="font-weight: bold;"> Mr. Arkadipta Mukherjee </span> ( Governing Body Rep  2020-21) </h5>
-                            <h5> <span style="font-weight: bold;"> Miss Tithi Ghosh</span> ( Asst. Technical Head 2021-22)</h5>
-                            <h5 > <span style="font-weight: bold;"> Mr. Souraprabha Ganguly </span>( Administration Committee Member ) </h5>
-                        </p>
-                         
+                          
                     </div>
                 </div>
 
@@ -282,40 +275,47 @@
                 <div class="row">
                      
                     <div class="col-lg-12 col-md-12">
-                        <span class="blue-text"><h2>From the General Secretary's Desk</h2></span>
-                        <p class="justify-text">The student body of any educational institute is one of the primary pillars of that institute. Thus every student body needs a platform through which they can voice their opinions, suggestions, complains and demands for their and their institute’s betterment. And not only voicing their opinion, but a platform is also very essential for proper communication among the students, faculty and administration. In GCELT this platform is provided to the students in form of Students Welfare Association of GCELT, a non-profitable, apolitical welfare association, by the students of GCELT and for the students of GCELT.</p>
-                        <p class="justify-text">Students Association of GCELT is a government of West Bengal registered association, the Reg. No being- S/1L/74818 of 2010-2011 under West Bengal Act XXVI of 1961. The main purpose and activity of this student body are as follows-
+                        <span class="blue-text"><h2>From the Union's Desk</h2></span>
+                        <p class="justify-text">গর্বের ১০ বছর<br>
+                            <br>
+                            Students' Welfare Association<br>
+                            <br>
+                            The student body of any educational institute is one of the primary pillars of that institute. Thus every student body needs a platform through which they can voice their opinions, suggestions, complains and demands for their and their institute’s betterment. And not only voicing their opinion, but a platform is also very essential for proper communication among the students, faculty and administration. In GCELT this platform is provided to the students in form of Students Welfare Association of GCELT, a non-profitable, apolitical welfare association, by the students of GCELT and for the students of GCELT.<br>
+                            
+                            Students Association of GCELT is a government of West Bengal registered association, the Reg. No being- S/1L/74818 of 2010-2011 under West Bengal Act XXVI of 1961. <br>
+                            
+                            10 college level clubs two district level and 1 International based club( RC GCELT) are running under the banner of Students Welfare Association.
+                            <br>
+                            <p class="justify-text"> 
+                            This Association  organises
+                            <ol>
+
+                            <li> Freshers</li>
+                            <li> Technical Festival</li>
+                            <li> Cultural Festival</li>
+                            <li> Sports Festival</li>
+                            <li> Sarswati Puja</li>
+                            <li> Farewell, every year.</li>
+
+                            </ol>
+
                         </p>
+                        <br>
                         <p class="justify-text">
-                            <samp>
-                               (1).To maintain a unity and communication among all the students of the college present or alumni. Provide a platform using which the students will be able to voice their opinions, suggestions and complains.
-                            </samp>
-                        </p>
-                        <p class="justify-text">
-                            <samp>
-                                (2).Organize and encourage various co-curricular activities. Different student clubs of GCELT such as the Anti-ragging club, Theatre club, Music club, Debate club, Sports club are all part of the Students Welfare Association.
-                            </samp>
-                        </p>
-                        <p class="justify-text">
-                            <samp>
-                               (3).Every year two fests: one cultural and one technical are being organized by the students of GCELT, under the banner of Students Welfare Association.
-                            </samp>
-                        </p>
-                        <p class="justify-text">
-                            <samp>
-                                (4).Annual cricket, football, badminton, carom tournament are organized by the association.
-                            </samp>
-                        </p>
-                        <p class="justify-text">
-                            <samp>
-                                (5).Other events organized and celebrated by the association includes- Freshers’ Welcome, Teachers’ Day, Independence Day, Republic Day, Rabindra Jayanti, Sharswati Puja, Final year Farewell etc.
-                            </samp>
-                        </p>
-                        <p class="justify-text">
-                            The office bearers of this association are strictly students studying in GCELT and no one else. The post of General Secretary contains student from 4th year, Assistant General Secretary from 3rd year, and Treasurer from both 4th and 3rd year. Other official posts of the association include Sports Secretary, Cultural Secretary, Association PR student. Also class’ representative from each year and each stream are also part of the Students’ Welfare Association of GCELT. The office bearers are strictly students studying at GCELT at that time and they are chosen through voting. This election is held every year, under the supervision of college administration.
-                        </p>
-                        <p class="justify-text">
-                            Lastly to speak about this association’s motive, it can be said, Students Welfare Association of GCELT echoes George Bernard Shaw’s words: “You see things, and you say "Why?" But I dream things that never were, and I say "Why not?".
+                            And other Red letter days  are celebrated with equal enthusiasm<br>
+                            <br>
+                            The association was founded on the same day of the year 2010 under the supervision of Founder President of Swa cum Ex Principal Of GCELT Dr Buddhadeb Chattopadhaya
+                            And incumbent vice president cum Registrar Mr. Roudrashis Hota.<br>
+                            <br>
+                            The first ever elected General secretary is SK Imran Hassan<br>
+                            <br>
+                            Every Member of the Association did their level best in their respective years for whom we are going to celebrate today the glourious journey of 10 years<br>
+                            <br>
+                            Please  listen some spellbound words from the Founder President of Swa cum Ex Principal Dr Buddhadeb Chattopadhaya and Incumbent President of SWA cum officer in Charge Dr Sanjoy Chakraborty<br>
+                            <br>
+                            Hopefully the pandemic time will over and whole college will celebrate  all the upcoming festivals with full of cherish and melange<br>
+                            <br>
+                            Stay Safe , Stay home. <br>
                         </p>
                     </div>
                 </div>
@@ -355,13 +355,7 @@
                                 <center><samp><p>Founder President OF SWA,GCELT & EX PRINCIPAL OF GCELT</p></samp></center>
                             </div>
                         </div>
-                        <div class="tm-progress-container tm-progress-container-left">
-                            <div class="tm-progress-label">
-                                <iframe width="400" height="200" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
-                                <center><samp><p>Mr. Roudrasis Hota</p></samp></center>
-                                <center><samp><p>Vice-President of SWA,GCELT & Registrar of GCELT</p></samp></center>
-                            </div>
-                        </div>
+                         
                         </div>
                     </div>
                 </div>
