--- a/views/student_id.ejs
+++ b/views/student_id.ejs
@@ -44,22 +44,6 @@
                         <samp style="color: #ffffff"><p>Reg. No being- S/1L/74818 of 2010-2011 under West Bengal Act XXVI of 1961.</p></samp>
                     </center>
                 </div>
-                <div class="col-sm-1 col-xs-1 col-md-1 col-lg-1">
-                    <center>
-                        <p>
-                         <h4> <a href="/register_page" style="color: #ffffff">Register</a> </h4>
-                        </p>    
-                        
-                    </center>
-                </div>
-                <div class="col-sm-1 col-xs-1 col-md-1 col-lg-1">
-                    <center>
-                        <p>
-                            <h4> <a href="/login_page" style="color: #ffffff">Log In</a> </h4>
-                        </p>    
-                    </center>
-                </div>
-
                  </div>
             </div>
         </div>
@@ -142,6 +126,32 @@
                             <samp>There are also alumni of this institute, who are flourishing in other professions apart from CS/IT and LT. GCELT takes pride in them also, as the institute believes, the ultimate goal is to be a proper human being and do well to oneself and to the society, and the field or process for doing so may vary. And GCELT makes sure that even when the student completes his/her course and attains the degree, the will to learn is not diminished in any form. It’s a matter of a joy, till date GCELT have been successful in doing so, and for that the students of the college deserves equal credit as the institute itself.</samp>
                         </p>
                         <!-- <center><a  class="btn-blue-gradient">Student Id Acoount</a></center> -->
+
+                        <div style="display: flex; flex-direction: row;justify-content: center;">
+                            <div class="form-group" style="margin-right: 10px;">
+                                <a href="/login_page">
+                                    <button
+                                    type="submit"
+                                    name="submit"
+                                    class="text-uppercase btn-blue-gradient btn-submit"
+                                    >
+                                    student login
+                                    </button>
+                                </a>   
+                            </div>
+    
+                            <div class="form-group">
+                                <a href="/register_page">
+                                    <button
+                                    type="submit"
+                                    name="submit"
+                                    class="text-uppercase btn-blue-gradient btn-submit"
+                                    >
+                                    student register
+                                    </button>
+                                </a>   
+                            </div>
+                        </div>
                     </div> <!-- col-lg-12 -->
                  
             </div> <!-- container -->
