--- a/views/union_members.ejs
+++ b/views/union_members.ejs
@@ -126,7 +126,7 @@
                     <!-- start 2021-22 -->
 
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2021-22">
-                        <img src="/MEMBERS/2021-22/mistri.jpg" alt="Image" class="img-thumbnail">
+                        <img src="/MEMBERS/2020-21/mistri.jpg" alt="Image" class="img-thumbnail">
                         <samp><p><h4>MR SUDIPTA MISTRI</h4></p></samp>
                         <samp><p>GOVERNING BODY(REP)</p></samp>
                         <samp><p>(2021-22)</p></samp>                  
@@ -1454,8 +1454,9 @@
                         <li><strong>Address- </strong>LB Block, Sector III, Bidhannagar, Kolkata, West Bengal 700098</li>
                         <li><strong>Mobile</strong>-6297112167</li>
                         <li><strong>Email Id</strong>- swa.gcelt@gmail.com </li>
-                        <li><a href="https://www.facebook.com/groups/gcelt"><i class="fa fa-facebook-f" style="font-size:30px;color:red"></i><strong>ACEBOOK</strong></a></li>
-                        <li><strong>YouTube</strong>- <a href="https://www.youtube.com/channel/UCcMxZX7cc21S3vxsuJkRl5A">https://www.youtube.com/channel/UCcMxZX7cc21S3vxsuJkRl5A</a> </li>
+                        <li><a href="https://www.facebook.com/groups/gcelt" target="_blank"><i class="fa fa-facebook-f" style="font-size:30px;color:red"></i><strong>ACEBOOK</strong></a></li>
+                       
+                        <li><a href="https://www.youtube.com/channel/UCcMxZX7cc21S3vxsuJkRl5A" target="_blank"><i class="fa fa-youtube-play " style="font-size:15px;color:red"></i><strong>  YOUTUBE</strong></a></li>
                     </ul>
                 </div>
             </div>
