--- a/views/gallery_batch.ejs
+++ b/views/gallery_batch.ejs
@@ -188,7 +188,7 @@
                         <div class="recent-events-wrap">
                             <img class="img-responsive" src="https://gcelt.gov.in/assets/images/gallery/batch-2008-12.jpg" style="border:5px double black;"alt="">
                             <samp>
-                            <center><a class="preview" href="https://gcelt.gov.in/assets/images/gallery/batch-2008-12.jpg"><i class="fa fa-eye"></i>View Batch-2009-13</a></center>
+                            <center><a class="preview" href="https://gcelt.gov.in/assets/images/gallery/batch-2008-12.jpg"><i class="fa fa-eye"></i>View Batch-2008-12</a></center>
                          </samp>
                         </div>
                     </div>
@@ -250,8 +250,9 @@
                         <li><strong>Address- </strong>LB Block, Sector III, Bidhannagar, Kolkata, West Bengal 700098</li>
                         <li><strong>Mobile</strong>-6297112167</li>
                         <li><strong>Email Id</strong>- swa.gcelt@gmail.com </li>
-                        <li><a href="https://www.facebook.com/groups/gcelt"><i class="fa fa-facebook-f" style="font-size:30px;color:red"></i><strong>ACEBOOK</strong></a></li>
-                        <li><strong>YouTube</strong>- <a href="https://www.youtube.com/channel/UCcMxZX7cc21S3vxsuJkRl5A">https://www.youtube.com/channel/UCcMxZX7cc21S3vxsuJkRl5A</a> </li>
+                        <li><a href="https://www.facebook.com/groups/gcelt" target="_blank"><i class="fa fa-facebook-f" style="font-size:30px;color:red"></i><strong>ACEBOOK</strong></a></li>
+                       
+                        <li><a href="https://www.youtube.com/channel/UCcMxZX7cc21S3vxsuJkRl5A" target="_blank"><i class="fa fa-youtube-play " style="font-size:15px;color:red"></i><strong>  YOUTUBE</strong></a></li>
                     </ul>
                 </div>
             </div>
