--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,17 +117,10 @@
                
                             </div>
                         </div>   <!-- carousel-container -->
-                        <div id="navbtns" class="crsl-nav">
-                            <a href="#" class="previous">
-                                <img src="/img/carousel-arrow-previous.png" alt="previous">
-                            </a>
-                            <a href="#" class="next">
-                                <img src="/img/carousel-arrow-next.png" alt="next">
-                            </a>
-                        </div>
+                         
                     </div>
                 </div>
-                <center><a class="btn-blue-gradient">Official Notice Box</a></center>
+                <!-- <center><a class="btn-blue-gradient">Official Notice Box</a></center> -->
                 <ul class="gray-text ul-1">
                             
                             <li> <b> Memo No: 251/IV/1 (Dated-03/12/2020):-</b><a href="https://drive.google.com/file/d/1uQ6vCLHDC7dvN_HYz7eSFc5saSRtVK_z/view"><u>DECENTRALIZED ADMISSION NOTICE: B Tech 1st Year 2020</u> <b>(NEW)</b></a> </li>
@@ -401,8 +394,9 @@
                         <li><strong>Address- </strong>LB Block, Sector III, Bidhannagar, Kolkata, West Bengal 700098</li>
                         <li><strong>Mobile</strong>-6297112167</li>
                         <li><strong>Email Id</strong>- swa.gcelt@gmail.com </li>
-                        <li><a href="https://www.facebook.com/groups/gcelt"><i class="fa fa-facebook-f" style="font-size:30px;color:red"></i><strong>ACEBOOK</strong></a></li>
-                        <li><strong>YouTube</strong>- <a href="https://www.youtube.com/channel/UCcMxZX7cc21S3vxsuJkRl5A">https://www.youtube.com/channel/UCcMxZX7cc21S3vxsuJkRl5A</a> </li>
+                        <li><a href="https://www.facebook.com/groups/gcelt" target="_blank"><i class="fa fa-facebook-f" style="font-size:30px;color:red"></i><strong>ACEBOOK</strong></a></li>
+                       
+                        <li><a href="https://www.youtube.com/channel/UCcMxZX7cc21S3vxsuJkRl5A" target="_blank"><i class="fa fa-youtube-play " style="font-size:15px;color:red"></i><strong>  YOUTUBE</strong></a></li>
                     </ul>
                 </div>
             </div>
