--- a/views/register_page.ejs
+++ b/views/register_page.ejs
@@ -214,9 +214,10 @@
                 <li><strong>Address- </strong>LB Block, Sector III, Bidhannagar, Kolkata, West Bengal 700098</li>
                 <li><strong>Mobile</strong>-6297112167</li>
                 <li><strong>Email Id</strong>- swa.gcelt@gmail.com </li>
-                <li><a href="https://www.facebook.com/groups/gcelt"><i class="fa fa-facebook-f" style="font-size:30px;color:red"></i><strong>ACEBOOK</strong></a></li>
-                <li><strong>YouTube</strong>- <a href="https://www.youtube.com/channel/UCcMxZX7cc21S3vxsuJkRl5A">https://www.youtube.com/channel/UCcMxZX7cc21S3vxsuJkRl5A</a> </li>
-            </ul>
+                <li><a href="https://www.facebook.com/groups/gcelt" target="_blank"><i class="fa fa-facebook-f" style="font-size:30px;color:red"></i><strong>ACEBOOK</strong></a></li>
+                       
+                        <li><a href="https://www.youtube.com/channel/UCcMxZX7cc21S3vxsuJkRl5A" target="_blank"><i class="fa fa-youtube-play " style="font-size:15px;color:red"></i><strong>  YOUTUBE</strong></a></li>
+                    </ul>
         </div>
     </div>
 </section>
