--- a/views/register_page.ejs
+++ b/views/register_page.ejs
@@ -223,7 +223,7 @@
 </section>
 <!-- end main content -->
 <footer class="text-center">
-    <p class="small copyright-text">2020 All Rights Reserved by SWA GCELT | <a href="http://cse.iitkgp.ac.in/~pallabnandi/" style="color: #ffffff">PALLAB NANDI</a></p>
+    <p class="small copyright-text">2020 All Rights Reserved by SWA GCELT |  </p>
 </footer>
 
 <!-- JS -->
