--- a/views/union_members.ejs
+++ b/views/union_members.ejs
@@ -305,6 +305,19 @@
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2021-22">
+                        <img src="/MEMBERS/2021-22/pritam mondal.jpeg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR PRITAM MONDAL</h4></p></samp>
+                        <samp><p>ESTABLISHMENT SECRETARY</p></samp>
+                        <samp><p>(2021-22)</p></samp>
+                    </div>
+                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2021-22">
+                        <img src="/MEMBERS/2021-22/vaibhab.jpeg" alt="Image" class="img-thumbnail">
+                        <samp><p><h4>MR VAIBHAB MISHRA</h4></p></samp>
+                        <samp><p>ESTABLISHMENT SECRETARY</p></samp>
+                        <samp><p>(2021-22)</p></samp>
+                    </div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 margin-bottom-30 folio-item 2021-22">
                         <img src="/MEMBERS/2021-22/bikram.jpeg" alt="Image" class="img-thumbnail">
                         <samp><p><h4>MR BIKRAM GHOSH</h4></p></samp>
                         <samp><p>HOSTEL AFFAIR SECRETARY</p></samp>
